# IPTV-Simple-client-with-recording-for-KODI-Leia

./: CMakeLists.txt  README.md
pvr.iptvsimple/: addon.xml.in  changelog.txt
pvr.iptvsimple/resources/: settings.xml
pvr.iptvsimple/resources/language/resource.language.en_gb/: strings.po
src/: PVRDvrData.cpp  PVRDvrData.h  PVRIptvData.cpp  PVRIptvData.h  PVRNamespace.h  PVRPlayList.cpp  PVRPlayList.h  PVRReaderThread.cpp  PVRReaderThread.h  PVRRecorderThread.cpp  PVRRecorderThread.h  PVRSchedulerThread.cpp  PVRSchedulerThread.h  PVRUtils.cpp  PVRUtils.h  client.cpp  client.h
src/libexecstream/posix/: exec-stream-helpers.h
